# token-explorer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
common/: html.py  models.py  probes.py  rope.py  tokenutils.py  viz.py
cross-model-comparison/: FINDINGS.md  compare.py  dashboard.py
docs/: FUTURE_NOTES.md
phase1-norms-and-structure/: FINDINGS.md  browser.py  charts.py  explore.py  tokenutils.py  visualize.py
phase2-ghost-cluster-and-analogies/: FINDINGS.md  analogy_explorer.py  browser.py  charts.py  deep_dive.py  neighbor_explorer.py
phase3-positional-embeddings/: FINDINGS.md  PHASE3B_FINDINGS.md  browser.py  charts.py  explore.py  phase3_browser.html  phase3_positional.py  phase3b_position_deep.py  phase3b_rope.py  phase3b_rope_browser.html  phase3b_rope_browser.py  phase3b_rope_charts.py  phase3c_pos_viz.py
phase3-positional-embeddings/results/gpt2/: position_cosine_matrix.npy  position_norms.npy  position_pca_coords.npy  results.json
phase3-positional-embeddings/results/pythia-70m/: phase3_charts.html  (+1 more)
phase4-cross-model/: FINDINGS.md  phase4_cross_model.py
phase5-layer-evolution/: FINDINGS.md  phase5_layer_evolution.py
phase6-attention-heads/: FINDINGS.md  ResidualStream.ipynb  phase6_attention_heads.py  phase6_viz.py
phase7-mlp-ablation/: FINDINGS.md  phase7_mlp_ablation.py
phase8-neuron-patterns/: FINDINGS.md  phase8_neuron_patterns.py
tests/: test_model_positions.py  test_phase3_results_schema.py  test_phase3b_results_schema.py  test_probe_config.py  test_results_schema.py  test_rope_utils.py  test_token_resolution.py
(+12 files in other folders)
