[tool.poetry]
package-mode = false
name = "token-explorer"
version = "0.1.0"
description = "Exploring the geometry of language model embeddings — from raw token vectors to mechanistic interpretability"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0"
transformers = "^4.0"
numpy = "^1.24"
scipy = "^1.10"
scikit-learn = "^1.2"
plotly = "^5.0"
umap-learn = "^0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
